Add NHPR feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -44,3 +44,17 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # NHPR
+        - { Type: A,    Name: !Sub "pf1194bucr.${Domain}", AliasTarget: { DNSName: "d2qvgcc08rldk7.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1194bucr.${Domain}", AliasTarget: { DNSName: "d2qvgcc08rldk7.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf8090qwbr.${Domain}", AliasTarget: { DNSName: "d124sohbjigoz1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8090qwbr.${Domain}", AliasTarget: { DNSName: "d124sohbjigoz1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf1860vesq.${Domain}", AliasTarget: { DNSName: "d25vzej9h8pae4.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1860vesq.${Domain}", AliasTarget: { DNSName: "d25vzej9h8pae4.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf6793tkju.${Domain}", AliasTarget: { DNSName: "d1kmvxl51w9awn.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf6793tkju.${Domain}", AliasTarget: { DNSName: "d1kmvxl51w9awn.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf0976palo.${Domain}", AliasTarget: { DNSName: "d30tabob7h0r2f.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf0976palo.${Domain}", AliasTarget: { DNSName: "d30tabob7h0r2f.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf1734nutb.${Domain}", AliasTarget: { DNSName: "d1oouv9r5wtrzk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1734nutb.${Domain}", AliasTarget: { DNSName: "d1oouv9r5wtrzk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
