Add more NHPR feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -58,3 +58,15 @@ Resources:
         - { Type: AAAA, Name: !Sub "pf0976palo.${Domain}", AliasTarget: { DNSName: "d30tabob7h0r2f.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: A,    Name: !Sub "pf1734nutb.${Domain}", AliasTarget: { DNSName: "d1oouv9r5wtrzk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf1734nutb.${Domain}", AliasTarget: { DNSName: "d1oouv9r5wtrzk.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf6512iunb.${Domain}", AliasTarget: { DNSName: "d6m4kd46vc3cd.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf6512iunb.${Domain}", AliasTarget: { DNSName: "d6m4kd46vc3cd.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf8576qpfd.${Domain}", AliasTarget: { DNSName: "d3ceuzu53w4u5q.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf8576qpfd.${Domain}", AliasTarget: { DNSName: "d3ceuzu53w4u5q.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf1133nnyq.${Domain}", AliasTarget: { DNSName: "du745stwoj0hi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1133nnyq.${Domain}", AliasTarget: { DNSName: "du745stwoj0hi.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf9173ytrn.${Domain}", AliasTarget: { DNSName: "d2s0g1914gpu2l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf9173ytrn.${Domain}", AliasTarget: { DNSName: "d2s0g1914gpu2l.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf1553vcxz.${Domain}", AliasTarget: { DNSName: "d1px4ldmparjsv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1553vcxz.${Domain}", AliasTarget: { DNSName: "d1px4ldmparjsv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A,    Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
