--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -45,6 +45,9 @@ Resources:
         - { Type: A,    Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf78e6d33db02b.${Domain}", AliasTarget: { DNSName: "d3uiczypvym4oo.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
+        - { Type: A,    Name: !Sub "pf7761hrish.${Domain}", AliasTarget: { DNSName: "d1hm69e0qkih2j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf7761hrish.${Domain}", AliasTarget: { DNSName: "d1hm69e0qkih2j.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
         # NHPR
         - { Type: A,    Name: !Sub "pf1194bucr.${Domain}", AliasTarget: { DNSName: "d2qvgcc08rldk7.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf1194bucr.${Domain}", AliasTarget: { DNSName: "d2qvgcc08rldk7.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
