Upgrade Node for CD state capture

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1397,7 +1397,7 @@ Resources:
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
