Upgrade Node for Notifications Lambdas

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -233,7 +233,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -348,7 +348,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -420,7 +420,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -997,7 +997,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt IkeHandlerLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -1028,7 +1028,7 @@ Resources:
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt IkeHandlerLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
