Upgrade Node for standalone Lambdas

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -221,7 +221,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Misc
