--- a/etc/workable-poller.yml
+++ b/etc/workable-poller.yml
@@ -168,7 +168,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt PollerFunctionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Misc
