Upgrade Node for ECS AMI lookup

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -138,7 +138,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
