Upgrade pixel/proxy runtimes

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -102,7 +102,7 @@ Resources:
       Handler: index.handler
       MemorySize: 192
       Role: !GetAtt ProxyLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       Tags:
         - Key: Project
