--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -113,7 +113,7 @@ Resources:
       Handler: index.handler
       MemorySize: 192
       Role: !GetAtt PixelLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       Tags:
         - Key: Project
