Upgrade Node for CI Lambdas

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -405,7 +405,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt CiStatusNotificationHandlerIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -524,7 +524,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt GitHubWebhookEndpointIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -660,7 +660,7 @@ Resources:
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt GitHubEventHandlerIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: Infrastructure
