Upgrade Node for feed-cdn Edge Lambdas

--- a/cdn/feed-cdn.yml
+++ b/cdn/feed-cdn.yml
@@ -321,7 +321,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt EdgeLambdaExecutionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: !Ref ProjectTag
@@ -357,7 +357,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt EdgeLambdaExecutionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: !Ref ProjectTag
