Update all analytics lambdas to node10

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -117,7 +117,7 @@ Resources:
       Handler: index.handler
       MemorySize: 384
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Dovetail
@@ -146,7 +146,7 @@ Resources:
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Dovetail
@@ -171,7 +171,7 @@ Resources:
       Handler: index.handler
       MemorySize: 1024
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Dovetail
@@ -197,7 +197,7 @@ Resources:
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Dovetail
