--- a/etc/resource-reporter.yml
+++ b/etc/resource-reporter.yml
@@ -108,7 +108,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 8
   LambdaErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
