Fix filename in resource reporter comment

--- a/etc/resource-reporter.yml
+++ b/etc/resource-reporter.yml
@@ -1,4 +1,4 @@
-# etc/cms-resource-reporter.yml
+# etc/resource-reporter.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Handles Resource SNS Events, Sends Report to Slack
 Parameters:
