Add aditional google site verification records for prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -35,6 +35,7 @@ Resources:
         - ResourceRecords:
             - '"status-page-domain-verification=6n18jv5h9b5d"'
             - '"google-site-verification=j5qsGbnU-E37T9lsaAYL1967H0ej6iZAeX_vEWcOA-w"'
+            - '"google-site-verification=NgVnyJeUZ7gbeAr4l2BeDMfDonC-U6W2VONkOMxb4IM"'
             - '"v=spf1 include:servers.mcsv.net include:_spf.invoicesherpa.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com -all"'
             - '"MS=ms48604406"'
           TTL: "300"
