--- a/stacks/serverless/cms-audio-lambda.yml
+++ b/stacks/serverless/cms-audio-lambda.yml
@@ -94,7 +94,7 @@ Resources:
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt CmsAudioLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 120
       Tags:
         - Key: Project
