--- a/stacks/serverless/cms-image-lambda.yml
+++ b/stacks/serverless/cms-image-lambda.yml
@@ -92,7 +92,7 @@ Resources:
       Handler: index.handler
       MemorySize: 512
       Role: !GetAtt CmsImageLambdaExecutionIAMRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 120
       Tags:
         - Key: Project
