Add AWS Serverless transform permission to CD

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1118,6 +1118,7 @@ Resources:
                   - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-staging/*"
                   - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-production/*"
                   - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:changeSet/*"
+                  - arn:aws:cloudformation:us-east-1:aws:transform/Serverless-2016-10-31
               - Effect: Deny
                 Action:
                   - "cloudformation:DeleteStack"
