Add HTTP API domain

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -33,6 +33,22 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       ValidationMethod: DNS
+  HttpApiDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Condition: CreateProductionResources
+    Properties:
+      DomainName: tower.radiotopia.fm
+      DomainNameConfigurations:
+        - CertificateArn: !Ref Certificate
+      # Tags: json TODO
+  HttpApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: CreateProductionResources
+    Properties:
+      ApiId: !Ref HttpApi
+      # ApiMappingKey: String
+      DomainName: tower.radiotopia.fm
+      Stage: $default
   # API
   # https://tower.radiotopia.fm/api/v2/episodes.json
   HttpApi:
