Add dependency to API mapping

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -44,6 +44,8 @@ Resources:
   HttpApiMapping:
     Type: AWS::ApiGatewayV2::ApiMapping
     Condition: CreateProductionResources
+    DependsOn:
+      - HttpApiDomainName
     Properties:
       ApiId: !Ref HttpApi
       # ApiMappingKey: String
