Update tower.radiotopia.fm DNS records

--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -174,15 +174,15 @@ Resources:
         - Type: A
           Name: !Sub tower.${Domain}
           AliasTarget:
-            DNSName: d28j1u25oq2mj3.cloudfront.net
+            DNSName: d-qg60461h4a.execute-api.us-east-1.amazonaws.com
             # Global CloudFront hosted zone ID
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: Z1UJRXOUMOOFQ8
         - Type: AAAA
           Name: !Sub tower.${Domain}
           AliasTarget:
-            DNSName: doerrhbe4q1bo.cloudfront.net
+            DNSName: d-qg60461h4a.execute-api.us-east-1.amazonaws.com
             # Global CloudFront hosted zone ID
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: Z1UJRXOUMOOFQ8
   Legacy:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
