--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -52,7 +52,7 @@ Parameters:
   DovetailSecretsVersion:
     Type: String
   DynamodbKinesisArn:
-    type: String
+    Type: String
     default: Kinesis Stream Arn
   # Dovetail Elixir ############################################################
   DovetailRouterEcrImageTag:
