set up the param coming in from the root stack

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -51,9 +51,8 @@ Parameters:
     Type: String
   DovetailSecretsVersion:
     Type: String
-  DynamodbKinesisArn:
-    Type: String
-    default: Kinesis Stream Arn
+  DynamodbKinesisStream:
+    Type: AWS::SSM::Parameter::Value<String>
   # Dovetail Elixir ############################################################
   DovetailRouterEcrImageTag:
     Type: String
