patch through the new stream param

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -537,7 +537,7 @@ Resources:
                   - "kinesis:PutRecord"
                   - "kinesis:PutRecords"
                 Resource:
-                  - !Ref DynamodbKinesisArn
+                  - !Ref DynamodbKinesisStream
       Tags:
         - Key: Project
           Value: Dovetail
@@ -548,7 +548,7 @@ Resources:
   DovetailRouterDynamodbKinesisSubscriptionFilter:
     Type: "AWS::Logs::SubscriptionFilter"
     Properties:
-      DestinationArn: !Ref DynamodbKinesisArn
+      DestinationArn: !Ref DynamodbKinesisStream
       FilterPattern: '{$.msg = impression}'
       LogGroupName: !Ref DovetailRouterLogGroup.LogGroupName
       RoleArn: !GetAtt DovetailRouterSubscriptionRole.arn
