fixup attribute references

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -550,8 +550,8 @@ Resources:
     Properties:
       DestinationArn: !Ref DynamodbKinesisStream
       FilterPattern: '{$.msg = impression}'
-      LogGroupName: !Ref DovetailRouterLogGroup.LogGroupName
-      RoleArn: !GetAtt DovetailRouterSubscriptionRole.arn
+      LogGroupName: !Ref DovetailRouterLogGroup
+      RoleArn: !GetAtt DovetailRouterSubscriptionRole.Arn
   # Autoscaling
   DovetailAutoScaling:
     Type: "AWS::ApplicationAutoScaling::ScalableTarget"
