--- a/etc/commitchange-ses.yml
+++ b/etc/commitchange-ses.yml
@@ -189,7 +189,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt MessageHandlerFunctionIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: Project
           Value: Misc
