--- a/etc/sample-step-functions.yml
+++ b/etc/sample-step-functions.yml
@@ -188,7 +188,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt SnsTopicLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: foo
           Value: bar
@@ -333,7 +333,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt AnalyzeLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Tags:
         - Key: foo
           Value: bar
