Create origin access identities

--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -132,6 +132,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+  CloudFrontOriginAccessIdentity:
+    Type: "AWS::CloudFront::CloudFrontOriginAccessIdentity"
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: !If [IsProduction, "Dovetail CDN Production", "Dovetail CDN Staging"]
   CloudFrontDistribution400Alarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
