Enable origin access identity

--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -120,7 +120,8 @@ Resources:
           - DomainName: !Ref OriginBucket
             Id: dovetail-stitch-s3
             OriginPath: !Ref OriginPath
-            S3OriginConfig: {}
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
         PriceClass: PriceClass_200
         ViewerCertificate:
           AcmCertificateArn: !Ref Certificate
