--- a/stacks/serverless/dovetail-traffic-lambda.yml
+++ b/stacks/serverless/dovetail-traffic-lambda.yml
@@ -14,22 +14,8 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
   #
-  # queue for downloads (TODO: trigger for this)
+  # lambda function
   #
-  DovetailTrafficSqsQueue:
-    Type: AWS::SQS::Queue
-    Properties:
-      MessageRetentionPeriod: 7200
-      QueueName: staging_dovetail_traffic
-      Tags:
-        - Key: Project
-          Value: Dovetail
-        - Key: Environment
-          Value: Staging
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
   DovetailTrafficLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -84,6 +70,23 @@ Resources:
           Value: Staging
         - Key: Name
           Value: "Dovetail-Traffic-Staging"
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  #
+  # queue for downloads (TODO: trigger for this)
+  #
+  DovetailTrafficSqsQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 7200
+      QueueName: staging_dovetail_traffic
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: Staging
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
