--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1157,6 +1157,7 @@ Resources:
                   - "logs:*"
                   - "route53:*"
                   - "sns:*"
+                  - "sqs:*"
                 Resource: "*"
       Tags:
         - Key: Project
