Add The Confessional feed DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -73,3 +73,6 @@ Resources:
         - { Type: AAAA, Name: !Sub "pf1553vcxz.${Domain}", AliasTarget: { DNSName: "d1px4ldmparjsv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: A,    Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf0076nbvt.${Domain}", AliasTarget: { DNSName: "d1kcyqoj93gu6x.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
