--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -401,6 +401,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub augury.${Domain}
+        - ResourceRecords:
+            - grove.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub grove.${Domain}
   PrxDotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
