--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -76,3 +76,6 @@ Resources:
 
         - { Type: A,    Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf7815naco.${Domain}", AliasTarget: { DNSName: "d2nfer7d2muc7b.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        - { Type: A,    Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf7781thda.${Domain}", AliasTarget: { DNSName: "d33abw8xtii3oc.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
