Update Tower for Node switch

--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -94,16 +94,18 @@ Resources:
             Method: get
             Path: /api/v2/episodes.json
           Type: HttpApi
-      Handler: lambda_function.lambda_handler
+      Handler: index.handler
+      Layers:
+        - arn:aws:lambda:us-east-1:561178107736:layer:npm-rgrove-parse-xml:1
       MemorySize: 512
       Role: !GetAtt TowerLambdaIamRole.Arn
-      Runtime: python2.7
+      Runtime: nodejs12.x
       Tags:
         Project: tower.radiotopia.fm
         Environment: !Ref EnvironmentType
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
-      Timeout: 8
+      Timeout: 16
   TowerLambdaErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateProductionResources
