Prevent Eventbrite Lambda from breaking on missing venue

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -187,9 +187,15 @@ Resources:
 
               // const order_ts = (Date.parse(order.created) / 1000);
 
+              let geo = ''
+
+              if (event.venue && event.venue.address) {
+                geo = `(${event.venue.address.city}, ${event.venue.address.region})`;
+              }
+
               return {
                   channel: SLACK_CHANNEL,
-                  username: `${SLACK_USERNAME} (${event.venue.address.city}, ${event.venue.address.region})`,
+                  username: `${SLACK_USERNAME} ${geo}`,
                   icon_emoji: SLACK_ICON,
                   text: [
                       `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> (<${adminUrl}|Manage>)`,
