Use DNS validcation for common stack certificate

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -17,9 +17,6 @@ Resources:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
       DomainName: !Sub "*.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
-      DomainValidationOptions:
-        - ValidationDomain: prx.tech
-          DomainName: !Sub "*.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
       SubjectAlternativeNames:
         - "*.prx.org"
         - "*.prxu.org"
@@ -39,6 +36,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
 Outputs:
   WildcardCertificateArn:
     Description: The ARN for the wildcard certificate
