Add certificate validation record for prxu.org

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -218,6 +218,11 @@ Resources:
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
+            - _f3ac86df105ba2b541203e3c55fc1a0b.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _4523c88a53cb676ba587436bd336533a.${Domain}
+        - ResourceRecords:
             - _a1223e715b9fc43c557b8daf3fa0df78.ltfvzjuylp.acm-validations.aws.
           TTL: "300"
           Type: CNAME
