--- a/etc/adzerk-poller.yml
+++ b/etc/adzerk-poller.yml
@@ -62,6 +62,7 @@ Resources:
           SLACK_ICON = ':adzerk:'
           SLACK_USERNAME = 'Adzerk'
           SLACK_CHANNEL = '#adzerk-flights'
+          SLACK_CHANNEL_PROBLEMS = '#adzerk-flights-problems'
 
           ADZERK_REQUEST_HEADERS = {
               'X-Adzerk-ApiKey': os.environ['ADZERK_API_KEY']
@@ -102,17 +103,9 @@ Resources:
               return attachments
 
 
-          def slack_message(flights):
-              return {
-                  'channel': SLACK_CHANNEL,
-                  'username': SLACK_USERNAME,
-                  'icon_emoji': SLACK_ICON,
-                  'attachments': slack_attachments(flights)
-              }
-
-
           def lambda_handler(event, context):
               flights = []
+              problem_flights = []
 
               t1 = datetime.datetime.utcnow() + datetime.timedelta(days=0)
               t2 = datetime.datetime.utcnow() + datetime.timedelta(days=2)
@@ -133,17 +126,50 @@ Resources:
               # The response is a line-delimited set of JSON flight objects
               for json_str in response_data.decode("utf-8").split("\n"):
                   if len(json_str) > 1:
-                      flights.append(json.loads(json_str))
+                      flight_data = json.loads(json_str)
+                      flights.append(flight_data)
+
+                      if not flight_data['EndDate'].endswith('59:00Z'):
+                          problem_flights.append(flight_data)
 
               print(f"Found {len(flights)} flights for this period")
 
               if len(flights) > 0:
                   sns.publish(
                       TopicArn=os.environ['SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN'],
-                      Message=json.dumps(slack_message(flights))
+                      Message=json.dumps({
+                          'channel': SLACK_CHANNEL,
+                          'username': SLACK_USERNAME,
+                          'icon_emoji': SLACK_ICON,
+                          'attachments': slack_attachments(flights)
+                      })
                   )
 
-      Description: >
+              if len(problem_flights) > 0:
+                  attachments = slack_attachments(problem_flights)
+                  for attachment in attachments:
+                      attachment['color'] = 'danger'
+
+                  sns.publish(
+                      TopicArn=os.environ['SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN'],
+                      Message=json.dumps({
+                          'channel': SLACK_CHANNEL_PROBLEMS,
+                          'username': SLACK_USERNAME,
+                          'icon_emoji': SLACK_ICON,
+                          'text': ':warning: Yikes! These flights have problems :rotating_light:'
+                      })
+                  )
+
+                  sns.publish(
+                      TopicArn=os.environ['SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN'],
+                      Message=json.dumps({
+                          'channel': SLACK_CHANNEL_PROBLEMS,
+                          'username': SLACK_USERNAME,
+                          'icon_emoji': SLACK_ICON,
+                          'attachments': attachments
+                      })
+                  )
+      Description: >-
         Finds ad flights starting soon in Adzerk and sends them to Slack via the
         Slack relay
       Environment:
