Use DNS validation for proxy.prx.org certificate
Closes #381

--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -22,21 +22,18 @@ Mappings:
     Testing:
       DomainName: "proxy.test.prx.tech"
       HostedZoneName: "prx.tech."
-      ValidationDomain: "prx.tech"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.test.prx.tech"
       PrxSessionKey: "_prx_session_test"
     Staging:
       DomainName: "proxy.staging.prx.tech"
       HostedZoneName: "prx.tech."
-      ValidationDomain: "prx.tech"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.staging.prx.tech"
       PrxSessionKey: "_prx_session_staging"
     Production:
       DomainName: "proxy.prx.org"
       HostedZoneName: "prx.org."
-      ValidationDomain: "prx.org"
       CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.prx.org"
       PrxSessionKey: "_prx_session"
@@ -45,9 +42,6 @@ Resources:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-      DomainValidationOptions:
-        - ValidationDomain: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ValidationDomain]
-          DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
       SubjectAlternativeNames:
         - "prx.org"
         - "www.prx.org"
@@ -62,6 +56,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
   ProxyLambdaIamRole:
     Type: "AWS::IAM::Role"
     Properties:
