Add ACM records for prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1705,3 +1705,13 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _13508a876b64465c58be4bfe738438d3.beta.${Domain}
+        - ResourceRecords:
+            - _2b3bfdcd1d1cc385a835e1817c9d85e9.nhqijqilxf.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _f3668666f8f3d4e418cd356d3b9a2b24.proxy.${Domain}
+        - ResourceRecords:
+            - _02d6b548b20de21df506dda97d2d93cf.nhqijqilxf.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _77f825fef8e66773824cae9664b30f4b.www.${Domain}
