Rename CI alarm

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -473,7 +473,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Event Handler v2"
+      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Event Handler"
       AlarmActions:
         - Fn::ImportValue:
             !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
